# bevy_overture_maps

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
app/: Cargo.toml
app/src/: bevy.rs  camera.rs  config.rs  dash.rs  ground.rs  light.rs  main.rs  parquet_import.rs
bevy/: Cargo.toml
bevy/src/: bevy.rs  building.rs  duckdb_query.rs  geo_util.rs  lib.rs  main.rs  parquet_import.rs  query_transportation.rs  transportation.rs
cli/: Cargo.toml
cli/src/: db.rs  geometry.rs  main.rs  overture_types.rs
src/: building.rs  duckdb_query.rs  geo_util.rs  lib.rs  material.rs  query_buildings.rs  query_transportation.rs  transportation.rs
