[package]
name = "bevy_overture_workspace"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1

[workspace]
resolver = "2"
members = ["bevy", "cli"]

[workspace.dependencies]
bevy = { version = "0.11", features = ["jpeg"] }
arrow = { version = "44.0.0", features = [
    "ipc",
    "test_utils",
    "prettyprint",
    "json",
] }
# geo = { version = "0.26.0", features = [] }
geo = { git = "https://github.com/georust/geo" }          # Vector2DOps
geozero = { version = "0.10.0", features = ["with-wkb"] }
geo-types = { version = "0.7.11" }
parquet = "44.0.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.28" }
