[package]
name = "bevy_overture_maps"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1

[workspace]
resolver = "2"
members = ["app", "cli"]

[workspace.dependencies]
arrow = { version = "44.0.0", features = [
    "ipc",
    "test_utils",
    "prettyprint",
    "json",
] }
bevy = { version = "0.11", features = ["jpeg"] }
duckdb = { git = "https://github.com/duckdb/duckdb-rs", features = [
] } # arrow 44
# geo = { version = "0.26.0", features = [] }
geo = { git = "https://github.com/georust/geo" }          # Vector2DOps
geozero = { version = "0.10.0", features = ["with-wkb"] }
geo-types = { version = "0.7.11" }
parquet = "44.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.28" }

[dependencies]
arrow = { workspace = true }
bevy = { workspace = true }
duckdb = { workspace = true }
geo = { workspace = true }
geozero = { workspace = true }
geo-types = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
