[package]
name = "bevy_overture_maps_app"
version = "0.2.0"
edition = "2021"

[dependencies]
arrow = { workspace = true }
bevy = { workspace = true }
duckdb = { workspace = true }
geo = { workspace = true }
geozero = { workspace = true }
geo-types = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bevy_overture_maps = { path = ".." }
