[package]
name = "bevy_overture_maps_app"
version = "0.3.2"
edition = "2021"

[features]
default = ["fps"]
fps = []

[dependencies]
arrow = { workspace = true }
bevy = { workspace = true }
duckdb = { workspace = true }
geo = { workspace = true }
geozero = { workspace = true }
geo-types = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bevy_overture_maps = { path = ".." }
