[package]
name = "bevy_overture"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { workspace = true }
bevy = { workspace = true }
geo = { workspace = true }
geozero = { workspace = true }
geo-types = { workspace = true }
duckdb = { git = "https://github.com/duckdb/duckdb-rs", features = [
] } # arrow 44
parquet = { workspace = true }
