[package]
name = "bevy_overture_maps_cli"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
duckdb = { workspace = true }
geo = { workspace = true }
geozero = { workspace = true }
geo-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde_yaml = "0.9.25"
